<resources>
    <string name="app_name" translatable="false">NutriCheck</string>
    <string name="onboarding_title">Willkommen bei NutriCheck!</string>
    <string name="onboarding_description">Dein smarter Kalorien- und Gewichtsbegleiter</string>
    <string name="onboarding_button_start">Loslegen</string>
    <string name="onboarding_button_next">Weiter</string>
    <string name="onboarding_question_name">Wie heißt du?</string>
    <string name="onboarding_question_birthdate">Wann bist du geboren?</string>
    <string name="onboarding_question_height">Wie groß bist du?</string>
    <string name="onboarding_question_weight">Wie viel wiegst du?</string>
    <string name="onboarding_question_target_weight">Welches Zielgewicht hast du?</string>
    <string name="onboarding_question_gender">Als was identifizierst du dich?</string>
    <string name="onboarding_question_activity_level">Wie oft treibst du Sport?</string>
    <string name="onboarding_question_goal">Welches Ziel verfolgst du aktuell?</string>

    <string name="userData_label_name">Name</string>
    <string name="userData_label_birthdate">Geburtsdatum</string>
    <string name="userData_label_height">Größe (cm)</string>
    <string name="userData_label_weight">Gewicht (kg)</string>
    <string name="userData_label_target_weight">Zielgewicht (kg)</string>
    <string name="userData_label_gender_male">Männlich</string>
    <string name="userData_label_gender_female">Weiblich</string>
    <string name="userData_label_gender_diverse">Divers</string>
    <string name="userData_label_activity_level_never">Nie</string>
    <string name="userData_label_goal_lose_weight">Abnehmen</string>
    <string name="userData_label_goal_gain_weight">Zunehmen</string>
    <string name="userData_error_name_required">Das Namensfeld darf nicht leer sein.</string>
    <string name="userData_label_goal_maintain_weight">Gewicht halten</string>
    <string name="userData_label_activity_level_occasionally">1–2/Woche</string>
    <string name="userData_label_activity_level_regularly">3–4/Woche</string>
    <string name="userData_label_activity_level_frequently">5+/Woche</string>

    <string name="profile_name">Hi, %1$s</string>
    <string name="profile_menu_age">Alter</string>
    <string name="profile_menu_height">Größe</string>
    <string name="profile_menu_weight">Gewicht</string>
    <string name="profile_menu_target_weight">Zielgewicht</string>
    <string name="age_years">%1$s Jahre</string>
    <string name="height_cm" translatable="false">%1$s cm</string>
    <string name="weight_kg" translatable="false">%1$s kg</string>
    <string name="profile_menu_item_personal_data">Persönliche Daten &amp; Ziel</string>
    <string name="profile_menu_item_weight_history">Gewichtsverlauf</string>
    <string name="profile_menu_item_darkmode">Dunkler Modus</string>
    <string name="profile_menu_item_language">Sprache</string>
    <string name="select_language_title">Sprache auswählen</string>
    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>
    <string name="profile_menu_item_gender">Geschlecht</string>
    <string name="profile_menu_item_activity_level">Aktivitätslevel</string>
    <string name="profile_menu_item_goal">Ziel</string>

    <string name="navigation_bar_label_home">Start</string>
    <string name="navigation_bar_label_profile">Profil</string>
...
    <string name="label_snack">Snack</string>
    <string name="label_calories_remaining">Verbleibende Kalorien</string>
    <string name="label_calorie_goal">Ziel</string>
    <string name="label_calories_consumed">Konsumiert</string>
    <string name="label_remaining">Verbleibend</string>
    <string name="label_history_add">+ Hinzufügen</string>
    <string name="label_macronutrition" translatable="false">Macros</string>
    <string name="range_7_days">7T</string>
    <string name="range_30_days">30T</string>
    <string name="range_60_days">60T</string>
    <string name="label_1_week" translatable="false">1W</string>
    <string name="label_2_weeks" translatable="false">2W</string>
    <string name="label_3_weeks" translatable="false">3W</string>
...
    <string name="userData_error_target_weight_required">Das Zielgewicht darf nicht leer sein.</string>
    <string name="userData_error_gender_required">Bitte wähle ein Geschlecht aus.</string>
    <string name="userData_error_activity_level_required">Bitte wähle dein Aktivitätslevel aus.</string>
    <string name="userData_error_goal_required">Bitte wähle ein Ziel aus.</string>
    <string name="userData_error_name_too_short">Der eingegebene Name ist zu kurz</string>
    <string name="userData_error_name_too_long">Der eingegebene Name ist zu lang</string>
    <string name="userData_error_height_too_short">Die eingegebene Größe ist zu klein</string>
    <string name="userData_error_height_too_tall">Die eingegebene Größe ist zu groß</string>
    <string name="userData_error_weight_too_low">Das eingegebene Gewicht ist zu klein</string>
    <string name="userData_error_weight_too_high">Das eingegebene Gewicht ist zu groß</string>
    <string name="userData_error_birthdate_future">Das eingegebene Geburtsdatum liegt in der Zukunft</string>
    <string name="userData_error_birthdate_too_old">Das eingegebene Geburtsdatum ist zu alt</string>
    <string name="userData_error_target_weight_too_low">Das eingegebene Zielgewicht ist zu niedrig</string>
    <string name="userData_error_target_weight_too_high">Das eingegebene Zielgewicht ist zu hoch</string>
    <string name="error_no_food_detected">Es wurde kein Essen erkannt, bitte nimm ein neues Bild auf</string>
...
    <string name="save_recipe_content_description" translatable="false">save recipe</string>
    <string name="details" translatable="false">Details</string>
    <string name="error_servings_range">Bitte wähle einen Wert zwischen %1$s und %2$s.</string>
    <string name="persist_description" translatable="false">Persist</string>
    <string name="serving_size_gram">%1$d Gramm</string>
    <string name="serving_size_grams">%1$d Gramm</string>
    <string name="onboarding_button_finish">Abschließen</string>
</resources>
